feat(client-database): updated service to support connections to additional mysql database
